--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -26,6 +26,12 @@ jobs:
           pip install -r requirements.txt
           pip install pytest httpx pytest-cov
 
+      - name: Download Models
+        shell: bash
+        run: |
+          chmod +x download_models.sh
+          ./download_models.sh
+
       - name: Run tests and collect coverage
         run: python -m pytest --cov --cov-report=xml
 
