--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -33,7 +33,7 @@ jobs:
           ./download_models.sh
 
       - name: Run tests and collect coverage
-        run: python -m pytest --cov --cov-report=xml
+        run: python -m pytest --disable-warnings --cov --cov-report=xml
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
